tests/ui/thread_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/thread_option_name.rs:16:22
   |
12 |     let thread = pin!(Thread::context());
   |                  ----------------------- a temporary with access to the borrow is created here ...
13 |
14 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
15 |     let mut opts = ThreadOptions::default();
16 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
19 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `ThreadContext`
